

Name: Harmoni Change-Log


v. 0.12.4 (The Future)
----------------------------------------------------
New in this relase include the addition of alternate repository implementations for
reading from simple database tables and federating together several different
repository implementations.

Also, Be sure to point the database updater script
(harmoni/core/DBHandler/db_updater.php) at your harmoni databases to add new columns
that changed in harmoni-0.11.0 and harmoni-0.12.0.
		
		
	* New feature: 
		A new repository implementation, SimpleTableRepository, exposes simple
		database table rows as Assets.
		(2007-10-05 - Adam Franco)
		
	* Bug Fix: 
		A new RepositoryManager implementation, FederationRepositoryManager, allows
		the usage of multiple Repository implementations.
		(2007-10-05 - Adam Franco)
		
	* Change: 
		Many implementations are now throwing OsidExceptions such as the
		UnimplementedException, UnknownIdException, etcetera, to allow these to be
		caught separately from generic errors.
		(2007-10-05 - Adam Franco)
		
	* Change: 
		AuthZ: The Authorization caching system now searches for and verifies the
		existance of qualifier Ids passed to it. It caches a list of unknown ids and
		throws an UnknownId Exception when asked about that qualifier. This change
		prevents the AuthorizationCache from continually rechecking authorizations
		for qualifiers it will never match, such as those in non-HarmoniRepository
		Repository implementations.
		(2007-10-05 - Adam Franco)
		
	* Bug Fix: 
		AuthN/LDAP: Previously, when users where members of objects that were not
		under the baseDN, searching for parent groups fell into an infinite loop.
		(2007-10-05 - Adam Franco)
		
	* Bug Fix: 
		SQL: Adding a harmoni-0.11.0 database updator that will add the 'creator'
		field to the dr_asset_info table.
		(2007-10-08 - Adam Franco)
	
v. 0.12.3 (2007-09-25)
----------------------------------------------------

		
	* Change: 