@@ -17,11 +17,12 @@
 			li {
 				padding-bottom: 3px;
 			}
+			
 		</style>
-<title>Harmoni Change-Log</title>
+<title>Harmoni Change Log</title>
 </head>
 <body>
-<h1>Harmoni Change-Log</h1>
+<h1>Harmoni Change Log</h1>
 <h2>Version 0.12.4</h2>
 <h3>The Future</h3>
 <p>New in this relase include the addition of alternate repository implementations for reading from simple database tables and federating together several different repository implementations.
