@@ -1,5 +1,6 @@
 
 Name: Harmoni Release Notes
+(See the Harmoni change log for more details)
 
 
 v. 0.12.4 (The Future)
